--- a/src/WorldTravel.Web/Pages/Shared/_Layout.cshtml
+++ b/src/WorldTravel.Web/Pages/Shared/_Layout.cshtml
@@ -43,7 +43,7 @@
     @await RenderSectionAsync("styles", false)
     @await Component.InvokeLayoutHookAsync(LayoutHooks.Head.Last, StandardLayouts.Empty)
 </head>
-<body class="template-index belle">
+<body class="template-index belle" style="background-color:#f9f9f9">
     <div id="pre-loader">
         <img src="/web/images/loader.gif" alt="Loading..." />
     </div>
