--- a/src/WorldTravel.Web/Pages/Shared/_Menu2.cshtml
+++ b/src/WorldTravel.Web/Pages/Shared/_Menu2.cshtml
@@ -13,16 +13,17 @@
     var jobs = await _jobAppService.GetJobListForUserAsync(new WorldTravel.Dtos.Jobs.GetJobRequestDto() { IsSeenHomePage = true });
 }
 <!--Web Menu-->
-<div class="header-wrap classicHeader animated d-flex">
+<div class="header-wrap classicHeader animated d-flex"style="background-color:transparent;">
     <div class="container-fluid">
+
         <div class="row align-items-center">
             <!--Web Logo-->
             <div class="logo col-md-2 col-lg-2 d-none d-lg-block" style="padding-right: 0px;">
                 <a href="/Home" style="text-decoration:none;">
                     <div style="display:flex;">
-                        <img src="/web/images/world-logo.png" height="40" alt="@L["ImageFailedToLoad"]" title="Anasayfa" />
-                        <span class="logo-next-name">@L["ProjectName"]</span>
-                    </div>
+                        <img src="/web/images/new-logo.png" height="120" alt="@L["ImageFailedToLoad"]" title="Anasayfa" />
+@*                        <span class="logo-next-name">@L["ProjectName"]</span>
+*@                    </div>
                 </a>
             </div>
             <!--End Web Logo-->
