--- a/src/WorldTravel.Web/wwwroot/web/css/custom.css
+++ b/src/WorldTravel.Web/wwwroot/web/css/custom.css
@@ -122,6 +122,13 @@
 
 @media (min-width: 1200px) {
     .home-text {
-        margin-top:-250px !important;
+        margin-top: -250px !important;
     }
+}
+
+
+/*--------------------*/
+
+.fs15 {
+    font-size: 15px !important;
 }
